[package]
name = "tgba"
version = "0.1.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Game Boy Advance emulator"
repository = "https://github.com/tanakh/tgba"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
ambassador = "0.3.1"
anyhow = "1.0.57"
bincode = "1.3.3"
bitvec = "1.0.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.6"
