[package]
name = "tgba"
version = "0.3.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Game Boy Advance emulator"
repository = "https://github.com/tanakh/tgba"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
meru-interface = "0.3.0"

ambassador = "0.3.2"
bincode = "1.3.3"
bitvec = "1.0.1"
log = "0.4.17"
modular-bitfield = "0.11.2"
schemars = { version = "0.8.10", features = ["schemars_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.7"
thiserror = "1.0.33"
